# project-m0therb0ardd

./: .gitingore  CMakeLists.txt  Doxyfile  README.md  project_ideas.md
Assignment 0/: AirlineTicket.cpp  a.out  airlineTicketReferences.cpp  memorymanipulation.cpp  socialMedia.md
docs/html/: Bindings_8cs.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Color_8cs.html  FontExample_2Program_8cs.html  InternalRGBLedMatrixOptions_8cs.html  MatrixRain_2Program_8cs.html  MinimalExample_2Program_8cs.html  Multiplexing_8cs.html  PlayGIF_2Program_8cs.html  PulsingBrightness_2Program_8cs.html  README_8md.html  RGBLedCanvas_8cs.html  RGBLedFont_8cs.html  RGBLedMatrixOptions_8cs.html  RGBLedMatrix_8cs.html  Rotating3DCube_2Program_8cs.html  ScanModes_8cs.html  ____init_____8py.html  annotated.html  bdf-font_8cc.html  bdf-font_8cc__incl.map  bdf-font_8cc__incl.md5  c-example_8c.html  c-example_8c__incl.map  c-example_8c__incl.md5  classAnt-members.html  classAnt.html  classAnt__coll__graph.map  classAnt__coll__graph.md5  classBrightnessPulseGenerator-members.html  classBrightnessPulseGenerator.html  classBrightnessPulseGenerator__inherit__graph.map  classBrightnessPulseGenerator__inherit__graph.md5  classColorPulseGenerator-members.html  classColorPulseGenerator.html  classColorPulseGenerator__coll__graph.map  classColorPulseGenerator__inherit__graph.md5  classDemoRunner-members.html  classDemoRunner.html  (+869 more)
docs/latex/: Bindings_8cs.tex  Color_8cs.tex  FontExample_2Program_8cs.tex  InternalRGBLedMatrixOptions_8cs.tex  MatrixRain_2Program_8cs.tex  MinimalExample_2Program_8cs.tex  Multiplexing_8cs.tex  PlayGIF_2Program_8cs.tex  PulsingBrightness_2Program_8cs.tex  RGBLedCanvas_8cs.tex  RGBLedFont_8cs.tex  RGBLedMatrixOptions_8cs.tex  RGBLedMatrix_8cs.tex  Rotating3DCube_2Program_8cs.tex  ScanModes_8cs.tex  ____init_____8py.tex  annotated.tex  bdf-font_8cc.tex  bdf-font_8cc__incl.md5  c-example_8c.tex  c-example_8c__incl.md5  classAnt.tex  classAnt__inherit__graph.md5  classBrightnessPulseGenerator.tex  classBrightnessPulseGenerator__inherit__graph.md5  classColorPulseGenerator.tex  classColorPulseGenerator__coll__graph.md5  classDemoRunner.tex  classDemoRunner__inherit__graph.md5  classGameLife.tex  classGameLife__coll__graph.md5  (+421 more)
include/: demo_runner.h  genetic_colors.h  guided_evolution.h  portal_effect.h  shared.h
src/: genetic_colors.cpp  guided_evolution.cpp  main.cpp  shared.cpp
test/: CMakeLists.txt  genetic_colors_test.cpp  guided_evolution_test.cpp  test_shared.cpp
(+178 files in other folders)
